# xdp_iface

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  README.md  configure.ac  license.xml  project.xml  project_template.gsl
.github/workflows/: docker-image.yml  fedora_test_build_install.yml  rust.yml
api/: xdp_iface.api  xdp_log.api  xdp_sock.api
bindings/: CMakeLists.txt
bindings/cpp/: CMakeLists.txt  xdpifacecpp.pc.in
bindings/cpp/include/: xdpiface.hpp
bindings/cpp/src/: xdp_iface.cpp  xdp_iface.hpp  xdp_iface_app.cpp  xdp_log.cpp  xdp_log.hpp  xdp_sock.cpp  xdp_sock.hpp
bindings/go/: go.mod
bindings/go/xdpiface/: xdpiface.go  xdpiface_test.go
bindings/python/: CMakeLists.txt  _project.py  xdpiface_app.py
bindings/python/xdpiface/: __init__.py  _xdpiface_ctypes.py  _xdpiface_sockopts.py
bindings/rust/: CMakeLists.txt
bindings/rust/libxdpiface-sys/: Cargo.toml  ReadMe.md  build.rs
bindings/rust/libxdpiface-sys/src/: lib.rs
builds/cmake/: ci_build.sh
builds/vm/fedora/: build_vm.sh  install_vm.sh  prepare_runner.sh  xdp_iface_set_up_vm.sh  xdp_iface_setup.sh  xdp_iface_test.sh
docs/: .buildinfo  changelog.html  examples.html  genindex.html  index.html  license.html  objects.inv  quickstart.html  search.html  searchindex.js  support.html
docs/.doctrees/: changelog.doctree  environment.pickle  examples.doctree  index.doctree  license.doctree  quickstart.doctree  support.doctree
docs/.doctrees/api/: index.doctree  xdp_iface.doctree  xdp_log.doctree  xdp_sock.doctree
docs/.doctrees/contributing/: code.doctree  index.doctree  internals.doctree
docs/_modules/: xdp_iface.c.html  xdp_iface.h.html  xdp_log.h.html  xdp_sock.c.html  xdp_sock.h.html
docs/_sources/: examples.md.txt  index.md.txt  quickstart.md.txt
docs/_sources/api/: index.md.txt  xdp_iface.rst.txt  xdp_log.rst.txt  xdp_sock.rst.txt
docs/_sources/contributing/: code.md.txt  index.md.txt  internals.md.txt
docs/api/: index.html  xdp_iface.html  xdp_log.html  xdp_sock.html
docs/contributing/: code.html  index.html  internals.html
docs_src/: CMakeLists.txt
docs_src/source/: changelog.md  conf.py  index.md  license.rst  quickstart.md  support.md
docs_src/source/api/: xdp_iface.rst  xdp_sock.rst
docs_src/source/contributing/: internals.md
include/: xdp_iface.h  xdp_log.h  xdp_sock.h  xdpiface.h  xdpiface_library.h
src/: libxdpiface.pc.in  xdp_iface.c  xdp_iface_app.c  xdp_log.c  xdp_log.h  xdp_sock.c  xdpiface_classes.h  xdpiface_private_selftest.c  xdpiface_selftest.c
xdp_sock_bpf/: CMakeLists.txt  xdp_sock_bpf.c
